--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@tailwindcss/vite": "^4.0.14",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
+    "knex": "^3.1.0",
     "react-circular-progressbar": "^2.2.0",
     "react-icons": "^5.5.0",
     "react-pro-sidebar": "^0.7.1",
